# fr-pmx-input-setup

./: Cargo.toml  README.md  build.rs  proto  proto-pipewire
src/: application.rs  main.rs
src/application/: port_control.rs
